ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.4
    • Affects Version/s: 3.1.2
    • Component/s: Replication
    • Fully Compatible
    • ALL
    • Hide
      var rst = new ReplSetTest({nodes: 2});
      rst.startSet();
      rst.initiate();
      rst.awaitSecondaryNodes();
      
      var testDB = rst.getPrimary().getDB('test');
      testDB.dropDatabase();
      
      testDB.createCollection('foo', {capped: true, size: 0});
      rst.awaitSecondaryNodes();
      
      Show
      var rst = new ReplSetTest({nodes: 2}); rst.startSet(); rst.initiate(); rst.awaitSecondaryNodes(); var testDB = rst.getPrimary().getDB('test'); testDB.dropDatabase(); testDB.createCollection('foo', {capped: true, size: 0}); rst.awaitSecondaryNodes();
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug affects versions 3.1.2+. It does not affect 3.0.x.

      It was introduced in this commit range, so the changes from SERVER-15860 and/or SERVER-15207 are the likely culprits.

      m31001|  E REPL     [repl writer worker 15] Failed command { create: "foo", capped: true } on test with status Location14832 specify size:<n> when capped is true during oplog application
      m31001|  I -        [repl writer worker 15] Fatal Assertion 16359
      m31001|  I -        [repl writer worker 15] 
      m31001| 
      m31001| ***aborting after fassert() failure
      

            Assignee:
            Matt Dannenberg (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: