SERVER-18792 when logging createCollection to the oplog always include size if capped:true